# blender-GPT

./: .gitignore  README.md  addon_blender_gpt.py  blenderGPT.py  config.json.example  package.sh  pyproject.toml  restart_blender_gpt.sh
addon_blender_gpt/: __init__.py
addon_blender_gpt/composite_objects/: concepts.txt  cursed.json
addon_blender_gpt/composite_objects/biomes/: rock_formation.json
addon_blender_gpt/composite_objects/decorative/: garden_path.json
addon_blender_gpt/composite_objects/nature/: flower_bed.json  fungi.json  ground_vegetation.json  trees.json
addon_blender_gpt/composite_objects/reference/: unrefined.json
addon_blender_gpt/dreamer/: __init__.py  core.py  decomposer.py  vision.py
composite_objects/nature/: ground_vegetation.json  trees.json
utilities/: addon_quick_access.py  package.sh  package_addon.py  restart_blender_gpt.sh
