[project]
name = "BlenderGPT"
version = "2.0.0"
description = "A Blender addon to generate and execute 3D scenes using OpenAI GPT with natural language prompts"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "virtualdmns", email = "virtualdmns@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0.0",
    "requests>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/virtualdmns/blender-gpt"
"Bug Tracker" = "https://github.com/virtualdmns/blender-gpt/issues"